# preddesk

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/adr/: 001-python-fastapi-supabase.md  002-hexagonal-architecture.md  003-no-live-trading-mvp.md  004-paper-broker-explainable.md  005-tdd-mandatory.md  006-supabase-infrastructure.md
docs/domain/: backtesting.md  market_data.md  paper_trading.md
docs/math/: bayes.md  brier_score.md  expected_value.md  implied_probability.md  kelly.md  pnl_and_mark_to_market.md
src/preddesk/application/: research_use_cases.py  use_cases.py
src/preddesk/domain/: backtester.py  entities.py  exceptions.py  paper_broker.py  ports.py  probability_models.py  research_entities.py  services.py  signal_engine.py  value_objects.py
src/preddesk/infrastructure/: in_memory_repos.py  polymarket_adapter.py
src/preddesk/interface/: api.py  cli.py
tests/e2e/: test_backtest_flow.py  test_ingest_to_paper_trade_flow.py
tests/integration/providers/: test_polymarket_adapter.py
tests/property/: test_portfolio_properties.py  test_pricing_properties.py  test_value_object_properties.py
tests/unit/application/: test_detect_signal.py  test_execute_backtest.py  test_generate_estimate.py  test_ingest_markets.py  test_research_use_cases.py  test_simulate_order.py
tests/unit/domain/: test_backtester.py  test_entities.py  test_paper_broker.py  test_probability_models.py  test_research_entities.py  test_services.py  test_signal_engine.py  test_value_objects.py
tests/unit/infrastructure/: test_in_memory_repos.py
tests/unit/interface/: test_api.py  test_cli.py
