[project]
name = "preddesk"
version = "0.1.0"
description = "Prediction Markets Research Workbench — read, model, simulate, evaluate"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10,<3",
    "fastapi>=0.115,<1",
    "sqlalchemy>=2.0,<3",
    "httpx>=0.28,<1",
    "tenacity>=9,<10",
    "structlog>=24,<26",
    "supabase>=2,<3",
    "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "pytest-asyncio>=0.25,<1",
    "hypothesis>=6,<7",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "pre-commit>=4,<5",
]

[project.scripts]
preddesk = "preddesk.interface.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/preddesk"]

# -- ruff --
[tool.ruff]
target-version = "py313"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["preddesk"]

# -- mypy --
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# -- pytest --
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# -- coverage --
[tool.coverage.run]
source = ["preddesk"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "\\.\\.\\.",
    "raise NotImplementedError",
]
